# PTGScroller

./: .gitignore  404.html  CNAME  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  scroller.py  scrollmake.py  scrollmaker.py  test.py  testcontent.xml  widgets.py
.github/workflows/: mkdocs-deploy.yml
docs/: how-to.md  index.md  reference.md  requirements.txt  tutorials.md
docs/src/: example.py
docs/stylesheets/: extra.css
examples/: scrolllibrary_example.py
explanation/: index.html
how-to/: index.html
ptgscroller/: scroller.py  scrollmake.py  widgets.py
reference/: index.html
scripts/: scrolllibrary_example.py
scroll_library/: readme.scrl  scrolllibrary_example.py  test_scroll.scrl
scroller/: __init__.py  __main__.py  scroller.py  widgets.py  xml.py  xml_handler.py
scroller/scripts/: scrolllibrary_example.py  scrollmake.py
tutorials/: index.html
