[tool.poetry]
name = "scroller"
version = "0.1.0"
description = "PTG-Scroller reads scroll files with the .scrl extension and displays the contents in a PyTermGUI session"
authors = ["Sean Del Castillo <seanbdcastillo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytermgui = "^7.4.0"
pillow = "^9.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
